<resources>
    <string name="app_name">Activity Diary</string>
    <string name="about_text_version">version <b>%1$s</b></string>
    <string name="about_text_intro">A diary for any kind of activities - organize your tasks in agile way and get reminded if something is expected to reoccur.</string>
    <string name="about_text_licence_h">License</string>
    <string name="about_text_licence"><![CDATA[%1$s is free software: you can redistribute it and/or modify it under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License</a>]]></string>
    <string name="about_text_license_2">This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="about_text_privacy_h">Privacy Policy</string>
    <string name="about_text_privacy"><![CDATA[%1$s and its authors have a deep interest to respect your privacy. The nature of this app is to track and store your activites and where and how you do them. Nevertheless it is your data in your hands and is not transmitted to any server or external party by the app without your explicit request. Read the full <a href=\"de.rampro.activitydiary.privacy_policy://show\">privacy policy</a>.]]></string>
    <string name="about_text_contact_h">Contact</string>
    <string name="about_text_contact"><![CDATA[For bugs and suggestions use the <a href="https://github.com/ramack/ActivityDiary/issues">issue tacker</a>, preferably in English language.]]></string>
    <string name="about_text_contact_2"><![CDATA[Source code can be found on <a href="https://github.com/ramack/ActivityDiary">Github</a>.]]></string>
    <string name="about_text_support_h">Support</string>
    <string name="about_text_support"><![CDATA[In case you want to support the development of %1$s consider discussing <a href="https://github.com/ramack/ActivityDiary/issues">issues on github</a>, translating on <a href="https://crowdin.com/project/activitydiary">crowdin</a> or donation on <a href="https://liberapay.com/ActivityDiary/">Liberapay</a>.]]></string>
    <string name="about_text_cont_h">Contributors</string>
    <string name="about_text_cont_2">We are looking forward to mention your name in this list, too.</string>
    <string name="about_text_lib_h">Libraries</string>
    <string name="about_text_lib">The following libraries are used by this application and licensed under the named licenses:</string>
    <string name="contributors" translatable="false"><![CDATA[
        <p><a href="https://www.raphael-mack.de">Raphael Mack</a> (developer)</p>
        <p><a href="https://web.facebook.com/profile.php?id=100011025332183">Murtala Umar</a> (Indonesian translation)</p>
        <p><a href="https://t.me/LinuxWorldIt">Tommaso</a> and Tiwi90 (Italian translation)</p>
        <p><a href="https://github.com/Tobaloidee">JC Abuyot</a> (Graphics)</p>
        <p><a href="https://github.com/ondri124">Bc. Ondrej Janitor</a></p>
        <p><a href="https://github.com/vit1-irk">Viktor Fedenyov</a> (Russian translation)</p>
        <p><a href="https://github.com/Spartee">Sam Partee</a></p>
        ]]>
    </string>
    <string name="libraries" translatable="false"><![CDATA[
        <p><a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> by Philipp Jahoda, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/osmdroid/osmdroid">osmdroid</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/Pes8/android-material-color-picker-dialog">Android Material Color Picker Dialog</a> by Simone Pessotto, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/ACRA/acra">ACRA - Application Crash Reports for Android</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="http://square.github.io/picasso/">Picasso</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p>appcompat, cardview, constraint-layout, recyclerview, material, preference, exifinterface, lifecycle license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        ]]></string>
    <string name="perm_write_external_storage_xplain">Storing photos requires permission to do so &#8230;</string>
    <string name="unsupported_on_api_level">This feature is not supported on your Android Version. Minimum API level %1$d required.</string>
    <string name="nav_main">Select Activity</string>
    <string name="nav_diary">Diary</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_map">Map</string>
    <string name="nav_add_activity">Add Activity</string>
    <string name="nav_show_deleted">Show Deleted</string>
    <string name="nav_hide_deleted">Hide Deleted</string>
    <string name="nav_activity_manager">Edit Activities</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_privacy" translatable="false">@string/about_text_privacy_h</string>
    <string name="desc_activity_color">Activity color</string>
    <string name="desc_activity_hint">Activity title</string>
    <string name="desc_activity_tag" translatable="false">Activity tag</string>
    <string name="desc_activity_select">Choose current activity&#8230;</string>
    <string name="desc_note_hint" translatable="false">@string/dialog_title_note</string>
    <string name="activity_image_description">Picture for activity</string>
    <string name="contentDesc_logo">Logo of activitydiary</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="notif_channel_current_activity_name">Current activity</string>
    <string name="notif_channel_current_activity_desc">Show notification for the activity you are currently doing</string>
    <string name="setting_view_category">View</string>
    <string name="setting_behavior_category">Behavior</string>
    <string name="setting_location_category">Location</string>
    <string name="setting_images_category">Images</string>
    <string name="setting_backup_category">Backup</string>
    <string name="setting_condition_category">Conditions</string>
    <string name="setting_datetime_format">Date format</string>
    <string name="setting_datetime_format_summary">@string/default_datetime_format</string>
    <string name="setting_datetime_format_description">Display format of the date and time for the start of an activity. Usual formats are yyyy-MM-dd HH:mm or dd.MM. hh:mm</string>
    <string name="setting_duration_format">Duration format</string>
    <string name="setting_duration_format_summary_dynamic">Dynamically adjust the format depending on the duration.</string>
    <string name="setting_duration_format_summary_precise">Always show durations with seconds resolution.</string>
    <string name="setting_duration_format_summary_nodays">Show durations with seconds resolution but don\'t replace 24h by 1 day.</string>
    <string name="setting_duration_format_summary_hour_min">Always show durations with hours and minutes.</string>
    <string name="setting_duration_format_description">Display format of the time durations.</string>
    <string name="setting_auto_select_new">Select new activities</string>
    <string name="setting_auto_select_new_summary_active">A freshly created activity is directly selected as the new active one</string>
    <string name="setting_auto_select_new_summary_inactive">Creation of new actitivies does not influence the currently active activity</string>
    <string name="setting_show_cur_activitiy_notification">Notification for current activity</string>
    <string name="setting_show_cur_activitiy_notification_summary_active">Current activity is shown as notification</string>
    <string name="setting_show_cur_activitiy_notification_summary_inactive">No notification for the current activity is shown</string>
    <string name="setting_silent_renotification">Silent notifications</string>
    <string name="setting_silent_reconfication_summary_active">No alert on change of notification text</string>
    <string name="setting_silent_reconfication_summary_inactive">Agressive alerts (with sound and vibration as configured) on each change of notification text</string>
    <string name="setting_disable_on_click">Terminate activity by click</string>
    <string name="setting_disable_on_click_summary_active">Current activity can be terminated by clicking the activity label</string>
    <string name="setting_disable_on_click_summary_inactive">Current activity can only be terminated by selecting a new one</string>
    <string name="setting_enable_acra">Crash Reporting</string>
    <string name="setting_acra_enabled">Send reports on crashes</string>
    <string name="setting_acra_disabled">Don\'t send reports on crashes</string>
    <string name="setting_use_location">Location Service</string>
    <string name="setting_use_location_summary">%1$s used to track device location</string>
    <string name="setting_use_location_off_summary">User location not tracked at all</string>
    <string name="perm_location_xplain">The configured option to track your location requires permission to do access the location of your device &#8230;</string>
    <string name="setting_storage_folder">Picture Storage Folder</string>
    <string name="setting_storage_folder_summary">Store activity photos in directory %1$s</string>
    <string name="setting_storage_folder_description">Directory to store the activity photos</string>
    <string name="default_storage_folder">ActivityDiary</string>
    <string name="setting_tag_images">Metadata</string>
    <string name="setting_tag_yes">Write current activity into EXIF tag UserComment of new images</string>
    <string name="setting_tag_no">Do not touch EXIF tags of new images</string>
    <string name="pref_cond_off">OFF</string>
    <string name="setting_cond_alpha">Alphabetical sort</string>
    <string name="setting_cond_alpha_summary">Alphabetical sorting has a weight of %1$s on suggested next activities</string>
    <string name="setting_cond_alpha_not_used_summary">Alphabetical sorting is not used for suggesting next activities</string>
    <string name="pref_cond_alpha_default" translatable="false">3</string>
    <string name="setting_cond_predecessor">Activity sequence</string>
    <string name="setting_cond_predecessor_summary">Activity sequence in the diary has a weight of %1$s on suggested next activities</string>
    <string name="setting_cond_predecessor_not_used_summary">Activity sequence in the diary is not used for suggesting next activities</string>
    <string name="pref_cond_predecessor_default" translatable="false">20</string>
    <string name="setting_cond_occurrence">Activity occurrence</string>
    <string name="pref_cond_occurrence_default" translatable="false">5</string>
    <string name="setting_export">Export database</string>
    <string name="setting_import">Import database</string>
    <string name="setting_export_summary">Store a copy of the current database in a file for backup</string>
    <string name="setting_import_summary">Restore a backup file to current database</string>
    <string name="default_datetime_format">yyyy.MM.dd HH:mm</string>
    <string name="desc_start_date">Start date</string>
    <string name="desc_start_time">Start time</string>
    <string name="desc_end_date">End date</string>
    <string name="desc_end_time">End time</string>
    <string name="history_detail_start">Start</string>
    <string name="history_detail_end">End</string>
    <string name="adjust_adjacent_times">Adjust adjacent diary entries</string>
</resources>