<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ActivityDiary
  ~
  ~ Copyright (C) 2017 Raphael Mack http://www.raphael-mack.de
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/setting_view_category">

        <android.support.v7.preference.EditTextPreference
            android:key="pref_datetimeFormat"
            android:title="@string/setting_datetime_format"
            android:summary="@string/setting_datetime_format_summary"
            android:dialogMessage="@string/setting_datetime_format_description"
            android:defaultValue="@string/default_datetime_format" />
    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/setting_behavior_category"
        >

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_auto_select_new"
            android:title="@string/setting_auto_select_new"
            android:summary="@string/setting_auto_select_new_summary_active"
            android:defaultValue="true"/>

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_show_cur_activity_notification"
            android:title="@string/setting_show_cur_activitiy_notification"
            android:summary="@string/setting_show_cur_activitiy_notification_summary_active"
            android:defaultValue="true"/>

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="acra.enable"
            android:title="@string/setting_enable_acra"
            android:summaryOn="@string/setting_acra_enabled"
            android:summaryOff="@string/setting_acra_disabled"
            android:defaultValue="true"/>

    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/setting_images_category"
        >

        <android.support.v7.preference.EditTextPreference
            android:key="pref_storageFolder"
            android:title="@string/setting_storage_folder"
            android:summary="@string/setting_storage_folder_summary"
            android:dialogMessage="@string/setting_storage_folder_description"
            android:defaultValue="@string/default_storage_folder" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_tag_images"
            android:title="@string/setting_tag_images"
            android:summary="@string/setting_tag_yes"
            android:defaultValue="true" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/setting_condition_category"
        >
        <ListPreference
            android:key="pref_cond_alpha"
            android:title="@string/setting_cond_alpha"
            android:dialogTitle="@string/setting_cond_alpha"
            android:entries="@array/pref_cond_weight_list_user"
            android:entryValues="@array/pref_cond_weight_list_values"
            android:defaultValue="@string/pref_cond_alpha_default" />
        <ListPreference
            android:key="pref_cond_predecessor"
            android:title="@string/setting_cond_predecessor"
            android:dialogTitle="@string/setting_cond_predecessor"
            android:entries="@array/pref_cond_weight_list_user"
            android:entryValues="@array/pref_cond_weight_list_values"
            android:defaultValue="@string/pref_cond_predecessor_default" />
        <ListPreference
            android:key="pref_cond_occurrence"
            android:title="@string/setting_cond_occurrence"
            android:dialogTitle="@string/setting_cond_occurrence"
            android:entries="@array/pref_cond_weight_list_user"
            android:entryValues="@array/pref_cond_weight_list_values"
            android:defaultValue="@string/pref_cond_occurrence_default" />


    </android.support.v7.preference.PreferenceCategory>
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/setting_backup_category"
        >
        <Preference
            android:key="pref_db_export"
            android:title="@string/setting_export"
            android:summary="@string/setting_export_summary" >

        </Preference>
        <Preference
            android:key="pref_db_import"
            android:title="@string/setting_import"
            android:summary="@string/setting_import_summary" >
        </Preference>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>