<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ActivityDiary
  ~
  ~ Copyright (C) 2018-2019 Raphael Mack http://www.raphael-mack.de
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <include
            layout="@layout/activity_row"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:transitionName="@string/current_activity_transition" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/start_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_detail_start"
        style="@style/Base.TextAppearance.AppCompat.Small"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/desc_start_date"
            android:contentDescription="@string/desc_start_date"
            android:onClick="showStartDatePickerDialog"/>

        <Button
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/desc_start_time"
            android:contentDescription="@string/desc_start_time"
            android:onClick="showStartTimePickerDialog"/>
    </LinearLayout>

    <TextView
        android:id="@+id/end_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_detail_end"
        style="@style/Base.TextAppearance.AppCompat.Small"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:contentDescription="@string/desc_end_date"
            android:singleLine="true"
            android:text="@string/desc_end_date"
            android:onClick="showEndDatePickerDialog"/>

        <Button
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/desc_end_time"
            android:contentDescription="@string/desc_end_time"
            android:onClick="showEndTimePickerDialog"/>
    </LinearLayout>

    <TextView
        android:id="@+id/time_error"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/adjust_adjacent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/adjust_adjacent_times" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_activity_note_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_activity_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_note_hint"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:minLines="4"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/picture_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>